trying to get the new model working
