# go/model_input_data.go
@@ -1,22 +1,0 @@
-/*
- * API POC Server
- *
- * This is a proof of concept OpenAPI server
- *
- * API version: 0.0.2
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package openapi
-
-type InputData struct {
-
-	// the operation to perform
-	Operation string `json:"operation,omitempty"`
-
-	// Value A
-	A int64 `json:"a,omitempty"`
-
-	// Value B
-	B int64 `json:"b,omitempty"`
-}
